# karura-2025AN-start

./: instructions.txt
install/: local_setup.sh  setup.sh
install/my_rover/share/ament_index/resource_index/package_run_dependencies/: my_rover
install/my_rover/share/ament_index/resource_index/parent_prefix_path/: my_rover
install/my_rover/share/my_rover/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_rover/share/my_rover/cmake/: my_roverConfig-version.cmake  my_roverConfig.cmake
install/my_rover/share/my_rover/config/: rover_controllers.yaml
install/my_rover/share/my_rover/environment/: ament_prefix_path.dsv  path.dsv
install/my_rover/share/my_rover/launch/: spawn_rover.launch.py  teleop_twist_keyboard_launch.py
install/my_rover/share/my_rover/urdf/: ros2_control.xacro  rover.urdf.xacro  rover_base.xacro  wheel_macro.xacro
log/: latest_build
src/my_rover/: CMakeLists.txt  package.xml
src/my_rover/config/: rover_controllers.yaml
src/my_rover/launch/: spawn_rover.launch.py  teleop_twist_keyboard_launch.py
src/my_rover/urdf/: ros2_control.xacro  rover.urdf.xacro  rover_base.xacro  wheel_macro.xacro
